Add layout index.html file

--- a/index.html
+++ b/index.html
@@ -28,26 +28,31 @@
             alt="Person listen music"
             title="illustration hero" />
         </div>
-        <div class="card__content">
-          <h1 class="card__title">Order Summary</h1>
-          <p class="card__description">
-            You can now listen to millions of songs, audiobooks, and podcasts on
-            any device anywhere you like!
-          </p>
-        </div>
-        <div class="card__payment payment">
-          <div class="payment__description">
-            <img src="images/icon-music.svg" alt="Icon Music" />
-            <p class="payment__plan">
-              <span class="payment__time">Annual Plan</span>
-              $59.99/year
+        <div class="card__containercontent">
+          <div class="card__content">
+            <h1 class="card__title">Order Summary</h1>
+            <p class="card__description">
+              You can now listen to millions of songs, audiobooks, and podcasts
+              on any device anywhere you like!
             </p>
           </div>
-          <a href="#">Change</a>
-        </div>
-        <div class="card__containersbtn">
-          <button class="card__btnpay">Proceed to Payment</button>
-          <a href="#">Cancel Order</a>
+          <div class="card__payment payment">
+            <div class="payment__description">
+              <img
+                src="images/icon-music.svg"
+                alt="Icon Music"
+                class="payment__image" />
+              <p class="payment__plan">
+                <span class="payment__time">Annual Plan</span>
+                $59.99/year
+              </p>
+            </div>
+            <a href="#" class="payment__changeplan">Change</a>
+          </div>
+          <div class="card__containersbtn">
+            <button class="card__btn card__btn--pay">Proceed to Payment</button>
+            <a href="#" class="card__btn card__brn--cancel">Cancel Order</a>
+          </div>
         </div>
       </section>
     </main>
